--- a/Front_Bingo/src/styles/board.css
+++ b/Front_Bingo/src/styles/board.css
@@ -1,5 +1,5 @@
-.App {
-    text-align: center;
+.App{
+    text-align: -webkit-center;
 }
 
 button {
@@ -7,6 +7,13 @@ button {
     margin: 10px;
     cursor: pointer;
     font-size: 16px;
+}
+
+.llamar{
+    background: thistle ;
+}
+.ganar{
+    background: tomato ;
 }
 
 .called-numbers {
@@ -22,19 +29,24 @@ button {
     margin-top: 20px;
 }
 
-.board {
+.player-board {
+    background-color: rgb(140, 250, 250);
     border: 2px solid #333;
-    padding: 10px;
-    max-width: 200px;
+    border-radius: 10px;
+    padding: 8px;
+    max-width: 300px;
 }
 
 .bingo-grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: 5px;
+    grid-gap: 8px;
+    padding: inherit;
 }
 
 .cell {
+    background-color: aliceblue !important;
+    border-radius: 3px;
     width: 40px;
     height: 40px;
     display: flex;
@@ -47,6 +59,5 @@ button {
 }
 
 .cell.selected {
-    background-color: #4caf50;
-    color: white;
+    background-color: #4caf50 !important;
 }
